# RIT-SPEX-HAB-ComputerVision

./: CMakeLists.txt  README.md
include/: detectLines.h  saveFrames.h
scripts/install/: install_opencv.sh
src/: detectLines.cpp  main.cpp  saveFrames.cpp
